--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,38 +1,58 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.blackBigContainer {
+  border: 5px solid black;
+  margin:5px;
+  border-radius: 10%;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.blackContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width:100%;
+  /* border: 2px gray solid; */
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.blackCard {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: flex-end;
+  justify-items: flex-end;
+  align-content: stretch;
+  background-color: black;
   color: white;
+  padding: 5px;
+  height: 300px;
+  width: 200px;
+}
+.bottomtag {
+  font-size: .5rem;;
+}
+.quote {
+  font-size: 1rem;;
+}
+.whiteBigContainer {
+  border: 5px solid black;
+  margin:5px;
+  border-radius: 10%;
 }
 
-.App-link {
-  color: #61dafb;
+.whiteContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width:100%;
+  /* border: 2px gray solid; */
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.whiteCard {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  justify-items: flex-end;
+  align-content: stretch;
+  border: 10px, solid, black;
+  margin: 5px;
+  height: 300px;
+  width: 200px;
+  
 }
