--- a/app/src/App.css
+++ b/app/src/App.css
@@ -32,9 +32,9 @@
   font-size: 1rem;;
 }
 .whiteBigContainer {
-  border: 5px solid black;
+  /* border: 5px solid black; */
   margin:5px;
-  border-radius: 10%;
+  /* border-radius: 10%; */
 }
 
 .whiteContainer {
@@ -42,7 +42,7 @@
   flex-wrap: wrap;
   justify-content: center;
   width:100%;
-  /* border: 2px gray solid; */
+  /* border: solid 5px black; */
 }
 .whiteCard {
   display: flex;
@@ -50,7 +50,8 @@
   justify-content: flex-end;
   justify-items: flex-end;
   align-content: stretch;
-  border: 10px, solid, black;
+  border: 10px, solid, black; 
+  border-radius: 10%;
   margin: 5px;
   height: 300px;
   width: 200px;
