--- a/app/src/App.css
+++ b/app/src/App.css
@@ -2,9 +2,9 @@
   text-align: center;
 }
 .blackBigContainer {
-  border: 5px solid black;
+  /* border: 5px solid black; */
   margin:5px;
-  border-radius: 10%;
+  /* border-radius: 10%; */
 }
 .blackContainer {
   display: flex;
@@ -24,6 +24,8 @@
   padding: 5px;
   height: 300px;
   width: 200px;
+  border: 5px solid black;
+  border-radius: 10%;
 }
 .bottomtag {
   font-size: .5rem;;
